# nrex

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  nrex.cpp  nrex.hpp  nrex.pro  nrex_config.h  test.cpp  test.txt
